# emotion_detection_ros

./: README.md  requirements.txt
emotion_detection_ros/: CMakeLists.txt  package.xml  setup.py
emotion_detection_ros/config/: model.yaml  ros.yaml
emotion_detection_ros/launch/: emotion_detection_ros.launch
emotion_detection_ros/models/: model_KNN.pkl  model_MLP.pkl  model_SVM.pkl
emotion_detection_ros/scripts/: emotion_detection_node.py
emotion_detection_ros/src/emotion_detection_ros/: emotion.py  emotion_predictor.py  emotional_mesh.py  emotional_mesh_detection.py
emotion_detection_ros_msgs/: CMakeLists.txt  package.xml
emotion_detection_ros_msgs/msg/: BoundingBox.msg
