<?xml version="1.0"?>
<package format="2">
  <name>emotion_detection_ros</name>
  <version>0.0.0</version>
  <description>The emotion_detection_ros package</description>

  <maintainer email="javimartinezmma@gmail.com">jmrtzma</maintainer>
  <license>TODO</license>
  <author email="javimartinezmma@gmail.com">Javier Martínez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
  
</package>
